// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Resource Details parameters Extension (ie: ligthning component) screenfield in automatic outputs mode No fetch exception Parameters fetch server call OK and NO error check UI: icon names, tooltip, labels...(snapshot) parameters displayed 1`] = `
<builder_platform_interaction-resource-details-parameters>
  #shadow-root(open)
    <div
      class="resource-detail-parameters-body"
    >
      <div
        class="slds-text-title_caps slds-text-color_weak slds-p-vertical_x-small"
      >
        FlowBuilderResourceDetailsParameters.header
      </div>
      <ul
        class="slds-has-block-links test-list-section-items"
      >
        <li
          class="slds-item"
        >
          <div
            class="slds-grid"
          >
            <lightning-icon
              class="slds-m-right_xx-small slds-m-top_xx-small"
            >
              #shadow-root(open)
            </lightning-icon>
            <span
              title="Prevents the user from modifying or copying the value."
            >
              Disabled
            </span>
          </div>
        </li>
        <li
          class="slds-item"
        >
          <div
            class="slds-grid"
          >
            <lightning-icon
              class="slds-m-right_xx-small slds-m-top_xx-small"
            >
              #shadow-root(open)
            </lightning-icon>
            <span
              title="The label that appears above the email field."
            >
              Label
            </span>
          </div>
        </li>
        <li
          class="slds-item"
        >
          <div
            class="slds-grid"
          >
            <lightning-icon
              class="slds-m-right_xx-small slds-m-top_xx-small"
            >
              #shadow-root(open)
            </lightning-icon>
            <span
              title="Text that appears in the field when it's empty. Use placeholder text to give users a hint about what to enter in the field."
            >
              Placeholder Text
            </span>
          </div>
        </li>
        <li
          class="slds-item"
        >
          <div
            class="slds-grid"
          >
            <lightning-icon
              class="slds-m-right_xx-small slds-m-top_xx-small"
            >
              #shadow-root(open)
            </lightning-icon>
            <span
              title="Prevents the user from modifying the value, but not from copying it."
            >
              Read Only
            </span>
          </div>
        </li>
        <li
          class="slds-item"
        >
          <div
            class="slds-grid"
          >
            <lightning-icon
              class="slds-m-right_xx-small slds-m-top_xx-small"
            >
              #shadow-root(open)
            </lightning-icon>
            <span
              title="Requires the user to enter a value."
            >
              Required
            </span>
          </div>
        </li>
        <li
          class="slds-item"
        >
          <div
            class="slds-grid"
          >
            <lightning-icon
              class="slds-m-right_xx-small slds-m-top_xx-small"
            >
              #shadow-root(open)
            </lightning-icon>
            <span
              title="To provide a default value, set this attribute's value. To use the user-entered value elsewhere in your flow, store this attribute's output value in a variable."
            >
              Value
            </span>
          </div>
        </li>
      </ul>
    </div>
</builder_platform_interaction-resource-details-parameters>
`;

exports[`Resource Details parameters Extension (ie: ligthning component) screenfield in automatic outputs mode No fetch exception Parameters fetch server call OK but error check UI: icon names, tooltip, labels (snapshot) no parameters displayed 1`] = `
<builder_platform_interaction-resource-details-parameters>
  #shadow-root(open)
</builder_platform_interaction-resource-details-parameters>
`;

exports[`Resource Details parameters Subflow in automatic outputs mode No fetch exception Parameters fetch server call OK and NO error check UI: icon names, tooltip, labels...(snapshot) parameters displayed 1`] = `
<builder_platform_interaction-resource-details-parameters>
  #shadow-root(open)
    <div
      class="resource-detail-parameters-body"
    >
      <div
        class="slds-text-title_caps slds-text-color_weak slds-p-vertical_x-small"
      >
        FlowBuilderResourceDetailsParameters.header
      </div>
      <ul
        class="slds-has-block-links test-list-section-items"
      >
        <li
          class="slds-item"
        >
          <div
            class="slds-grid"
          >
            <lightning-icon
              class="slds-m-right_xx-small slds-m-top_xx-small"
            >
              #shadow-root(open)
            </lightning-icon>
            <span>
              accountOutput
            </span>
          </div>
        </li>
        <li
          class="slds-item"
        >
          <div
            class="slds-grid"
          >
            <lightning-icon
              class="slds-m-right_xx-small slds-m-top_xx-small"
            >
              #shadow-root(open)
            </lightning-icon>
            <span>
              accountOutputCollection
            </span>
          </div>
        </li>
        <li
          class="slds-item"
        >
          <div
            class="slds-grid"
          >
            <lightning-icon
              class="slds-m-right_xx-small slds-m-top_xx-small"
            >
              #shadow-root(open)
            </lightning-icon>
            <span>
              carOutput (Latest Version Only)
            </span>
          </div>
        </li>
        <li
          class="slds-item"
        >
          <div
            class="slds-grid"
          >
            <lightning-icon
              class="slds-m-right_xx-small slds-m-top_xx-small"
            >
              #shadow-root(open)
            </lightning-icon>
            <span>
              carOutputCollection (Latest Version Only)
            </span>
          </div>
        </li>
        <li
          class="slds-item"
        >
          <div
            class="slds-grid"
          >
            <lightning-icon
              class="slds-m-right_xx-small slds-m-top_xx-small"
            >
              #shadow-root(open)
            </lightning-icon>
            <span>
              inputOutput1
            </span>
          </div>
        </li>
        <li
          class="slds-item"
        >
          <div
            class="slds-grid"
          >
            <lightning-icon
              class="slds-m-right_xx-small slds-m-top_xx-small"
            >
              #shadow-root(open)
            </lightning-icon>
            <span>
              inputOutput2 (Active Version Only)
            </span>
          </div>
        </li>
        <li
          class="slds-item"
        >
          <div
            class="slds-grid"
          >
            <lightning-icon
              class="slds-m-right_xx-small slds-m-top_xx-small"
            >
              #shadow-root(open)
            </lightning-icon>
            <span>
              output1
            </span>
          </div>
        </li>
        <li
          class="slds-item"
        >
          <div
            class="slds-grid"
          >
            <lightning-icon
              class="slds-m-right_xx-small slds-m-top_xx-small"
            >
              #shadow-root(open)
            </lightning-icon>
            <span>
              output2 (Active Version Only)
            </span>
          </div>
        </li>
        <li
          class="slds-item"
        >
          <div
            class="slds-grid"
          >
            <lightning-icon
              class="slds-m-right_xx-small slds-m-top_xx-small"
            >
              #shadow-root(open)
            </lightning-icon>
            <span>
              output3 (Active Version Only)
            </span>
          </div>
        </li>
        <li
          class="slds-item"
        >
          <div
            class="slds-grid"
          >
            <lightning-icon
              class="slds-m-right_xx-small slds-m-top_xx-small"
            >
              #shadow-root(open)
            </lightning-icon>
            <span>
              output4 (Latest Version Only)
            </span>
          </div>
        </li>
      </ul>
    </div>
</builder_platform_interaction-resource-details-parameters>
`;

exports[`Resource Details parameters Subflow in automatic outputs mode No fetch exception Parameters fetch server call OK but error check UI: icon names, tooltip, labels (snapshot) no parameters displayed 1`] = `
<builder_platform_interaction-resource-details-parameters>
  #shadow-root(open)
</builder_platform_interaction-resource-details-parameters>
`;

exports[`Resource Details parameters core action "Local action" in automatic outputs mode No fetch exception Parameters fetch server call OK and NO error check UI: icon names, tooltip, labels...(snapshot) parameters displayed 1`] = `
<builder_platform_interaction-resource-details-parameters>
  #shadow-root(open)
    <div
      class="resource-detail-parameters-body"
    >
      <div
        class="slds-text-title_caps slds-text-color_weak slds-p-vertical_x-small"
      >
        FlowBuilderResourceDetailsParameters.header
      </div>
      <ul
        class="slds-has-block-links test-list-section-items"
      >
        <li
          class="slds-item"
        >
          <div
            class="slds-grid"
          >
            <lightning-icon
              class="slds-m-right_xx-small slds-m-top_xx-small"
            >
              #shadow-root(open)
            </lightning-icon>
            <span>
              greeting
            </span>
          </div>
        </li>
        <li
          class="slds-item"
        >
          <div
            class="slds-grid"
          >
            <lightning-icon
              class="slds-m-right_xx-small slds-m-top_xx-small"
            >
              #shadow-root(open)
            </lightning-icon>
            <span>
              subject
            </span>
          </div>
        </li>
      </ul>
    </div>
</builder_platform_interaction-resource-details-parameters>
`;

exports[`Resource Details parameters core action "Local action" in automatic outputs mode No fetch exception Parameters fetch server call OK but error check UI: icon names, tooltip, labels (snapshot) no parameters displayed 1`] = `
<builder_platform_interaction-resource-details-parameters>
  #shadow-root(open)
</builder_platform_interaction-resource-details-parameters>
`;

exports[`Resource Details parameters core action "submit for approval" in automatic outputs mode No fetch exception Parameters fetch server call OK and NO error check UI: icon names, tooltip, labels...(snapshot) parameters displayed 1`] = `
<builder_platform_interaction-resource-details-parameters>
  #shadow-root(open)
    <div
      class="resource-detail-parameters-body"
    >
      <div
        class="slds-text-title_caps slds-text-color_weak slds-p-vertical_x-small"
      >
        FlowBuilderResourceDetailsParameters.header
      </div>
      <ul
        class="slds-has-block-links test-list-section-items"
      >
        <li
          class="slds-item"
        >
          <div
            class="slds-grid"
          >
            <lightning-icon
              class="slds-m-right_xx-small slds-m-top_xx-small"
            >
              #shadow-root(open)
            </lightning-icon>
            <span
              title="The ID of the approval process instance."
            >
              Instance ID
            </span>
          </div>
        </li>
        <li
          class="slds-item"
        >
          <div
            class="slds-grid"
          >
            <lightning-icon
              class="slds-m-right_xx-small slds-m-top_xx-small"
            >
              #shadow-root(open)
            </lightning-icon>
            <span
              title="The status of the approval. The valid values are \\"Approved,\\" \\"Rejected,\\" \\"Removed,\\" or \\"Pending.\\""
            >
              Instance Status
            </span>
          </div>
        </li>
        <li
          class="slds-item"
        >
          <div
            class="slds-grid"
          >
            <lightning-icon
              class="slds-m-right_xx-small slds-m-top_xx-small"
            >
              #shadow-root(open)
            </lightning-icon>
            <span
              title="An array of the ID(s) of the work item(s) created for the next step in this approval process."
            >
              New Work Item IDs
            </span>
          </div>
        </li>
        <li
          class="slds-item"
        >
          <div
            class="slds-grid"
          >
            <lightning-icon
              class="slds-m-right_xx-small slds-m-top_xx-small"
            >
              #shadow-root(open)
            </lightning-icon>
            <span
              title="An array of the ID(s) of the next approver(s)."
            >
              Next Approver IDs
            </span>
          </div>
        </li>
        <li
          class="slds-item"
        >
          <div
            class="slds-grid"
          >
            <lightning-icon
              class="slds-m-right_xx-small slds-m-top_xx-small"
            >
              #shadow-root(open)
            </lightning-icon>
            <span
              title="The ID of the record submitted for approval."
            >
              Record ID
            </span>
          </div>
        </li>
      </ul>
    </div>
</builder_platform_interaction-resource-details-parameters>
`;

exports[`Resource Details parameters core action "submit for approval" in automatic outputs mode No fetch exception Parameters fetch server call OK but error check UI: icon names, tooltip, labels (snapshot) no parameters displayed 1`] = `
<builder_platform_interaction-resource-details-parameters>
  #shadow-root(open)
</builder_platform_interaction-resource-details-parameters>
`;
